# Mlops

./: mlflow.db  pyproject.toml
01-intro/: homework.ipynb
Experiment Tracking/: duration-prediction.ipynb  mlflow.db
Experiment Tracking/data/: data_loader.py  green_trip_data
Experiment Tracking/mlruns/2/1de6c3dd0b64435c8aefb10eaeb96096/artifacts/: feature_importance_weight.json
Experiment Tracking/mlruns/2/1de6c3dd0b64435c8aefb10eaeb96096/artifacts/model/: MLmodel  conda.yaml
